// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </button>
</div>
`;

exports[`Storyshots Button.Color Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-7z7a5n"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-g292r5"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Primary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1bz4i4n"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1d3pd55"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-6d8xa9"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Secondary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-18mk5p8"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-5ilodz"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-lr62rp"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Shape Circle 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-fjsbt8"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    DEFAULT
  </button>
  <button
    className="css-182y61d"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    PRIMARY
  </button>
  <button
    className="css-j08ou9"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1bz4i4n"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-18mk5p8"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Rounded 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-19ri1qw"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    DEFAULT
  </button>
  <button
    className="css-1rn1mlq"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    PRIMARY
  </button>
  <button
    className="css-n3axsg"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.State Disabled 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1bz4i4n"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-18mk5p8"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-7z7a5n"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1d3pd55"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-5ilodz"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-g292r5"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-6d8xa9"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-lr62rp"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.State Loading 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-2ejxgz"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-zkj8nq"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-8ru81c"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-cf2hzo"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1jw2y6l"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-jr3rx"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-1j9pmef"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1o32oxy"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-19y65w8"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.Variant Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1bz4i4n"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-18mk5p8"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-7z7a5n"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1d3pd55"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-5ilodz"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-g292r5"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-6d8xa9"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-lr62rp"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Checkbox Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-gjhifb"
      color="default"
      shape="default"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1ybqmd5"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1iiqnrr"
      color="default"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Primary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ndznmz"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-eg0i81"
      color="primary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Secondary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-13y257h"
      color="secondary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-x1j67p"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Circle 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1iiqnrr"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-eg0i81"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-x1j67p"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Rounded 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1ybqmd5"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ndznmz"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-13y257h"
      color="secondary"
      shape="rounded"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Expansion Panel Live Props 1`] = `
<div
  className="css-14973vb"
>
  <header
    className="css-etwn3d"
  >
    <h2>
      Title
    </h2>
    <button
      className="css-k2mrk6"
      color="primary"
      disabled={false}
      onClick={[Function]}
      shape="circle"
    >
      <svg>
        plus.svg
      </svg>
    </button>
  </header>
</div>
`;

exports[`Storyshots Radio Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-6licz0"
      color="default"
      shape="circle"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Radio.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1x7ytu0"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1c0yn5h"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1lscehh"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Switch Live Props 1`] = `
<div
  className="css-14973vb"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="55ecf315-c0fd-4344-98df-9b8dda4cc193"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-uuzt70"
    color="default"
    htmlFor="55ecf315-c0fd-4344-98df-9b8dda4cc193"
  />
  Change my appearance from 
  <strong>
    "Knobs"
  </strong>
   tab
</div>
`;

exports[`Storyshots Switch.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="daa48f0d-d8e6-43cc-8a3f-8cfd0dd3b43e"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-arccat"
    color="default"
    htmlFor="daa48f0d-d8e6-43cc-8a3f-8cfd0dd3b43e"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="c8fcae56-4d63-4008-9de9-e716985f2dcf"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-15g7b4q"
    color="primary"
    htmlFor="c8fcae56-4d63-4008-9de9-e716985f2dcf"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="3eaa9d0d-8d3e-48ad-a6f7-891fba07bd9f"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-19k4clw"
    color="secondary"
    htmlFor="3eaa9d0d-8d3e-48ad-a6f7-891fba07bd9f"
  />
</div>
`;

exports[`Storyshots Switch.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="518fc033-9b7a-40c5-b6e2-541d26f9d2d5"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-arccat"
    color="default"
    htmlFor="518fc033-9b7a-40c5-b6e2-541d26f9d2d5"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="f755ff6d-3923-4d95-8851-83cdbaa0fb5e"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-15g7b4q"
    color="primary"
    htmlFor="f755ff6d-3923-4d95-8851-83cdbaa0fb5e"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="ca73e3eb-6513-41a2-b4b3-30440fa85f5c"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-19k4clw"
    color="secondary"
    htmlFor="ca73e3eb-6513-41a2-b4b3-30440fa85f5c"
  />
</div>
`;

exports[`Storyshots Switch.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="a726870c-bafe-4c64-b5de-17e6e8188b08"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-arccat"
    color="default"
    htmlFor="a726870c-bafe-4c64-b5de-17e6e8188b08"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="201ca983-234c-45fd-af65-d316b524a6e2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-15g7b4q"
    color="primary"
    htmlFor="201ca983-234c-45fd-af65-d316b524a6e2"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="37424d99-0db2-44eb-ab08-8856233b0e39"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-19k4clw"
    color="secondary"
    htmlFor="37424d99-0db2-44eb-ab08-8856233b0e39"
  />
</div>
`;
